fix COOKIE
