# backend/apps/accounts/schema.py
@@ -1,0 +1,13 @@
+from drf_spectacular.extensions import OpenApiAuthenticationExtension
+
+
+class ActiveAccountJWTAuthenticationScheme(OpenApiAuthenticationExtension):
+    target_class = "apps.accounts.authentication.ActiveAccountJWTAuthentication"
+    name = "bearerAuth"
+
+    def get_security_definition(self, auto_schema):
+        return {
+            "type": "http",
+            "scheme": "bearer",
+            "bearerFormat": "JWT",
+        }
